--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <main id="main">
-        <h1>Nikolai Vasilyevich Gogol</h1>
+        <h1 id="title">Nikolai Vasilyevich Gogol</h1>
         <p>The writer of 'The Overcoat'</p>
         <div id="img-div">
             <img id="image" src="resources/Gogol.jpg" alt="A statue of Gogol" />
@@ -20,77 +20,43 @@
         <section id="tribute-info">
             <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
             <ul>
-                <li><strong>1914</strong> - Born in Cresco, Iowa</li>
+                <li><strong>1809</strong> - Born in Ukrainian Cossack, Sorochyntsi</li>
                 <li>
-                    <strong>1933</strong> - Leaves his family's farm to attend the
-                    University of Minnesota, thanks to a Depression era program known as
-                    the "National Youth Administration"
+                    <strong>1820</strong> - Nikolai Gogol went to a school of higher art 
+                    in Nezhin (Nizhyn) (now Nizhyn Gogol State University).
                 </li>
                 <li>
-                    <strong>1935</strong> - Has to stop school and save up more money.
-                    Works in the Civilian Conservation Corps, helping starving
-                    Americans. "I saw how food changed them", he said. "All of this left
-                    scars on me."
+                    <strong>1828</strong> - Gogol went to Saint Petersburg.
                 </li>
                 <li>
-                    <strong>1937</strong> - Finishes university and takes a job in the
-                    US Forestry Service
+                    <strong>1831</strong> - The first volume of Gogol's Ukrainian stories 
+                    (Evenings on a Farm Near Dikanka) was published, and met with immediate success.
                 </li>
                 <li>
-                    <strong>1938</strong> - Marries wife of 69 years Margret Gibson.
-                    Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman,
-                    he returns to school study under Stakman, who teaches him about
-                    breeding pest-resistent plants.
+                    <strong>1834</strong> - Gogol was made Professor of Medieval History 
+                    at the University of St. Petersburg, a job for which he had no qualifications.
                 </li>
                 <li>
-                    <strong>1941</strong> - Tries to enroll in the military after the
-                    Pearl Harbor attack, but is rejected. Instead, the military asked
-                    his lab to work on waterproof glue, DDT to control malaria,
-                    disinfectants, and other applied science.
+                    <strong>1835</strong> - Gogol resigned his chair.
                 </li>
                 <li>
-                    <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant
-                    Pathology
+                    <strong>1836 - 1848</strong> - Gogol lived abroad, travelling through 
+                    Germany and Switzerland.
                 </li>
                 <li>
-                    <strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-                    leaves behind his pregnant wife, and flies to Mexico to head a new
-                    plant pathology program. Over the next 16 years, his team breeds
-                    6,000 different strains of disease resistent wheat - including
-                    different varieties for each major climate on Earth.
+                    <strong>1841</strong> - The first part of Dead Souls was ready, 
+                    and Gogol took it to Russia to supervise its printing.
                 </li>
                 <li>
-                    <strong>1945</strong> - Discovers a way to grown wheat twice each
-                    season, doubling wheat yields
+                    <strong>1848</strong> - Gogol returned to Russia from a pilgrimage 
+                    to Jerusalem and passed his last years in restless movement 
+                    throughout the country.
                 </li>
                 <li>
-                    <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat
-                    with a high-yeidling American breed, creating a strain that responds
-                    well to fertilizer. It goes on to provide 95% of Mexico's wheat.
+                    <strong>1852</strong> - he burned some of his manuscripts, 
+                    which contained most of the second part of Dead Souls.
                 </li>
-                <li>
-                    <strong>1962</strong> - Visits Delhi and brings his high-yielding
-                    strains of wheat to the Indian subcontinent in time to help mitigate
-                    mass starvation due to a rapidly expanding population
-                </li>
-                <li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-                <li>
-                    <strong>1983</strong> - helps seven African countries dramatically
-                    increase their maize and sorghum yields
-                </li>
-                <li>
-                    <strong>1984</strong> - becomes a distinguished professor at Texas
-                    A&M University
-                </li>
-                <li>
-                    <strong>2005</strong> - states "we will have to double the world
-                    food supply by 2050." Argues that genetically modified crops are the
-                    only way we can meet the demand, as we run out of arable land. Says
-                    that GM crops are not inherently dangerous because "we've been
-                    genetically modifying plants and animals for a long time. Long
-                    before we called it science, people were selecting the best breeds."
-                </li>
-                <li><strong>2009</strong> - dies at the age of 95.</li>
+                <li><strong>1852 </strong> - Dies at the age of 42.</li>
             </ul>
             <blockquote
                 cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
