--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="img-div">
             <img id="image" src="resources/Gogol.jpg" alt="A statue of Gogol" />
             <figcaption id="img-caption">
-                A statue of Gogol at the Villa Borghese gardens, Rome.
+                Statue of writer Nikolay Gogol on Malaya Konyushennaya Ulitsa.
             </figcaption>
         </div>
         <section id="tribute-info">
