--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     throughout the country.
                 </li>
                 <li>
-                    <strong>1852</strong> - he burned some of his manuscripts, 
+                    <strong>1852</strong> - He burned some of his manuscripts, 
                     which contained most of the second part of Dead Souls.
                 </li>
                 <li><strong>1852 </strong> - Dies at the age of 42.</li>
