--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </figcaption>
         </div>
         <section id="tribute-info">
-            <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+            <h3 id="headline">Here's a time line of Gogol's life:</h3>
             <ul>
                 <li><strong>1809</strong> - Born in Ukrainian Cossack, Sorochyntsi</li>
                 <li>
